# diytraining

./: README.md  docker-compose.yaml  dockerfile  entrypoint.sh  pyproject.toml  pyproject.toml.example
migrations/: env.py
migrations/versions/: 4a15698033ec_create_users_table.py
src/diytraining/: app.py  database.py  security.py
src/diytraining/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_users.py
